--- a/UsedCar.ipynb
+++ b/UsedCar.ipynb
@@ -320,12 +320,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export to csv\n",
-    "cleaned_data.to_csv(\"cleaned_used_car.csv\")"
+    "cleaned_data.to_csv(\"Data/cleaned_used_car.csv\")"
    ]
   },
   {
