--- a/UsedCar.ipynb
+++ b/UsedCar.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Dependancies\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +216,7 @@
        "4 -82.537537  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -253,59 +261,84 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>price</th>\n",
-       "      <th>year</th>\n",
        "      <th>manufacturer</th>\n",
        "      <th>make</th>\n",
+       "      <th>year</th>\n",
+       "      <th>price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5000</td>\n",
-       "      <td>1978.0</td>\n",
        "      <td>ford</td>\n",
        "      <td>bronco</td>\n",
+       "      <td>1978.0</td>\n",
+       "      <td>5000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5000</td>\n",
-       "      <td>2008.0</td>\n",
        "      <td>buick</td>\n",
        "      <td>lucerne cxl v6</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>5000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13500</td>\n",
-       "      <td>2006.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Pont GTO</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>13500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6200</td>\n",
-       "      <td>2006.0</td>\n",
        "      <td>mercedes-benz</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>6200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>37900</td>\n",
-       "      <td>2016.0</td>\n",
        "      <td>ford</td>\n",
        "      <td>f350</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>37900</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   price    year   manufacturer            make\n",
-       "0   5000  1978.0           ford          bronco\n",
-       "1   5000  2008.0          buick  lucerne cxl v6\n",
-       "2  13500  2006.0            NaN        Pont GTO\n",
-       "3   6200  2006.0  mercedes-benz             NaN\n",
-       "4  37900  2016.0           ford            f350"
+       "    manufacturer            make    year  price\n",
+       "0           ford          bronco  1978.0   5000\n",
+       "1          buick  lucerne cxl v6  2008.0   5000\n",
+       "2            NaN        Pont GTO  2006.0  13500\n",
+       "3  mercedes-benz             NaN  2006.0   6200\n",
+       "4           ford            f350  2016.0  37900"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_data = cars[[\"manufacturer\",\"make\",\"year\", \"price\"]]\n",
+    "cleaned_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "manufacturer    object\n",
+       "make            object\n",
+       "year            object\n",
+       "price            int64\n",
+       "dtype: object"
       ]
      },
      "execution_count": 11,
@@ -314,18 +347,266 @@
     }
    ],
    "source": [
-    "cleaned_data = cars[[\"price\",\"year\",\"manufacturer\", \"make\"]]\n",
+    "cleaned_data.astype({'year':'str'}).dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nathanhigley/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/pandas/core/generic.py:5208: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self[name] = value\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>make</th>\n",
+       "      <th>year</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ford</td>\n",
+       "      <td>bronco</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>buick</td>\n",
+       "      <td>lucerne cxl v6</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pont GTO</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>13500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mercedes-benz</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>6200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ford</td>\n",
+       "      <td>f350</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>37900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    manufacturer            make  year  price\n",
+       "0           ford          bronco  1978   5000\n",
+       "1          buick  lucerne cxl v6  2008   5000\n",
+       "2            NaN        Pont GTO  2006  13500\n",
+       "3  mercedes-benz             NaN  2006   6200\n",
+       "4           ford            f350  2016  37900"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_data.year = cleaned_data['year'].astype(str).str[0:4]\n",
+    "\n",
     "cleaned_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>make</th>\n",
+       "      <th>year</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ford</th>\n",
+       "      <td>bronco</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>buick</th>\n",
+       "      <td>lucerne cxl v6</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford</th>\n",
+       "      <td>f350</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>37900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mercedes-benz</th>\n",
+       "      <td>benz</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chevrolet</th>\n",
+       "      <td>silverado</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dodge</th>\n",
+       "      <td>caravan (braun ramp)</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>14050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gmc</th>\n",
+       "      <td>g1500</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>3299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kia</th>\n",
+       "      <td>rio lx</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>9500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford</th>\n",
+       "      <td>mustang</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>8499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>subaru</th>\n",
+       "      <td>forester</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>3900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>596826 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               make  year  price\n",
+       "manufacturer                                    \n",
+       "ford                         bronco  1978   5000\n",
+       "buick                lucerne cxl v6  2008   5000\n",
+       "ford                           f350  2016  37900\n",
+       "mercedes-benz                  benz  1992   1200\n",
+       "chevrolet                 silverado  2003   5000\n",
+       "...                             ...   ...    ...\n",
+       "dodge          caravan (braun ramp)  2007  14050\n",
+       "gmc                           g1500  2005   3299\n",
+       "kia                          rio lx  2016   9500\n",
+       "ford                        mustang  2014   8499\n",
+       "subaru                     forester  2001   3900\n",
+       "\n",
+       "[596826 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaner = cleaned_data.dropna()\n",
+    "cleanest = cleaner.set_index('manufacturer')\n",
+    "cleanest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export to csv\n",
-    "cleaned_data.to_csv(\"Data/cleaned_used_car.csv\")"
+    "cleanest.to_csv(\"Data/cleaned_used_car.csv\")"
    ]
   },
   {
