new car clean edit

--- a/Data_Cleaning/New_car_cleaned.ipynb
+++ b/Data_Cleaning/New_car_cleaned.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -274,20 +274,20 @@
        "4  BMW    1 Series  2011  34500"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.DataFrame(data)\n",
-    "clean = df[[\"Make\", 'Model', 'Year', 'MSRP']]\n",
+    "clean = df.loc[:, [\"Make\", 'Model', 'Year', 'MSRP']]\n",
     "clean.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
